Fix a bug that long URLs will not break on the answer page.

--- a/front-end/css/custom.css
+++ b/front-end/css/custom.css
@@ -170,6 +170,8 @@ h2 {
   overflow-y: visible;
   overflow-x: hidden;
   min-height: 40px;
+  word-break: break-word;
+  hyphens: auto;
 }
 
 .custom-survey input.custom-textbox-survey,
